rendered/envs/alpha/argo-test/deployment-argo-test.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    a8r.io/repository: https://github.com/Zebradil/myks-homelab
  name: argo-test
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: argo-test
  template:
    metadata:
      labels:
        app.kubernetes.io/name: argo-test
    spec:
      containers:
        - image: mccutchen/go-httpbin:v2.15.0
          name: argo-test
          ports:
            - containerPort: 8080
              name: http
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - all
            privileged: false
