rendered/envs/alpha/argo-test/ingress-argo-test.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    a8r.io/repository: https://github.com/Zebradil/myks-homelab
  name: argo-test
spec:
  rules:
    - host: argo-test.zebradil.dev
      http:
        paths:
          - backend:
              service:
                name: argo-test
                port:
                  name: http
            path: /
            pathType: Prefix
    - host: argo-test.gray.zebradil.dev
      http:
        paths:
          - backend:
              service:
                name: argo-test
                port:
                  name: http
            path: /
            pathType: Prefix
    - host: argo-test.junior.zebradil.dev
      http:
        paths:
          - backend:
              service:
                name: argo-test
                port:
                  name: http
            path: /
            pathType: Prefix
    - host: argo-test.ts.zebradil.dev
      http:
        paths:
          - backend:
              service:
                name: argo-test
                port:
                  name: http
            path: /
            pathType: Prefix
    - host: argo-test.gray.ts.zebradil.dev
      http:
        paths:
          - backend:
              service:
                name: argo-test
                port:
                  name: http
            path: /
            pathType: Prefix
    - host: argo-test.junior.ts.zebradil.dev
      http:
        paths:
          - backend:
              service:
                name: argo-test
                port:
                  name: http
            path: /
            pathType: Prefix
    - host: argo-test.lan.zebradil.dev
      http:
        paths:
          - backend:
              service:
                name: argo-test
                port:
                  name: http
            path: /
            pathType: Prefix
    - host: argo-test.gray.lan.zebradil.dev
      http:
        paths:
          - backend:
              service:
                name: argo-test
                port:
                  name: http
            path: /
            pathType: Prefix
    - host: argo-test.junior.lan.zebradil.dev
      http:
        paths:
          - backend:
              service:
                name: argo-test
                port:
                  name: http
            path: /
            pathType: Prefix
